--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
   
 <body>
-  <h1>Rutgers University</h1>
+  <h1>Single cell transcriptomic analysis reveals molecular differences in mouse models of spinal cord injuries</h1>
+  <h2> Hani Alostaz</h2>
 </body>
   
 </html>
